# computer-graphics-learning

./: .gitignore  CMakeLists.txt  CMakePresets.json  ComputerGraphicsLearning.sln  README.md
demos/: README.md
demos/cpp-starter/: CMakeLists.txt  README.md  cpp_starter.vcxproj  cpp_starter.vcxproj.filters
demos/cpp-starter/src/: main.cpp
demos/meshlib-starter/: CMakeLists.txt  README.md  meshlib_starter.vcxproj  meshlib_starter.vcxproj.filters
demos/meshlib-starter/assets/: simple-triangle.stl
demos/meshlib-starter/src/: main.cpp
notes/: README.md
notes/games101/: lecture-01-overview.md
notes/geometry-processing/: README.md
notes/linear-algebra/: README.md
references/: README.md
weekly-reports/: 2026-07-week-01.md
